 * Removed deprecated Gradient,GradientImplementation,ParametricGradient::gradient(inP,parameter)
 * Removed deprecated Hessian,HessianImplementation,ParametricHessian::operator(inP,parameter)
 * Removed ExponentialCauchy, SecondOrderModel, SecondOrderImplementation
 * LowDiscrepancyExperiment to work with dependent distributions

=== Python module ===

=== Miscellaneous ===
 * CMake >= 2.8.4 is required to build OpenTURNS

=== Bug fixes ===
 * #949 (LowDiscrepancyExperiment for distributions having dependent copula)


== 1.11rc1 release (2018-04-11) == #release-1.11rc1

=== Library ===

==== Major changes ====

==== New classes ====
 * FrechetFactory
 * Fehlberg
 * TranslationFunction
 * DomainComplement, DomainIntersection, DomainUnion, DomainDisjunctiveUnion, DomainDifference
 * SmoothedUniform
 * NearestNeighbourAlgorithm, RegularGridNearestNeighbour, NaiveNearestNeighbour, NearestNeighbour1D
 * EnclosingSimplex, EnclosingSimplexImplementation, NaiveEnclosingSimplex, RegularGridEnclosingSimplex, EnclosingSimplexMonotonic1D, BoundingVolumeHierarchy
 * IndicesCollection
 * SymbolicParserExprTk
 * EvaluationProxy
 * MemoizeFunction, MemoizeEvaluation
 * Evaluation, Gradient, Hessian
 * MeshDomain
 * NormInfEnumerateFunction
 * FunctionalChaosSobolIndices
 * P1LagrangeInterpolation
 * FilonQuadrature

==== API changes ====
 * Removed deprecated NumericalMathFunction class
 * Removed deprecated QuadraticNumericalMathFunction class
 * Removed deprecated LinearNumericalMathFunction class
 * Removed deprecated NumericalSample class
 * Removed deprecated NumericalPoint[WithDescription] class
 * Removed deprecated NumericalScalarCollection class
 * Removed deprecated NumericalComplexCollection class
 * Removed deprecated PosteriorRandomVector class
 * Removed deprecated ConditionedNormalProcess class
 * Removed deprecated ResourceMap::[SG]AsNumericalScalar methods
 * Removed deprecated SpecFunc::*NumericalScalar* constants